--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+derive_more = { version = "1.0.0-beta", features = ["from"]}
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
+serial_test = "3.2"
